@@ -4,7 +4,7 @@ include ../gnuwin32/MkRules
 CPPFLAGS=-I../include -DHAVE_CONFIG_H -DR_DLL_BUILD
 CSOURCES = \
 	cpoly.c fft.c fmin.c integrate.c interv.c \
-	machar.c maxcol.c optim.c pretty.c rcont.c strsignif.c uncmin.c
+	machar.c maxcol.c optim.c pretty.c strsignif.c uncmin.c
 FSOURCES = \
 	ch2inv.f chol.f \
 	dchdc.f dpbfa.f dpbsl.f dpoco.f dpodi.f dpofa.f dposl.f dqrdc.f \
